# OsterMath

./: .gitignore  CMakeCache.txt.prev  CMakeLists.txt  OsterMath  OsterMath_ru_RU.ts  README.md  cmake_install.cmake  home  home.pub  settings_structure.odt
.cmake/api/v1/reply/: cache-v2-18f3613d9c3657983c6d.json  codemodel-v2-2229bcacaf41aa8dac07.json  codemodel-v2-8f1566c9e075af89a9f1.json  target-OsterMath-Debug-2b8ebd46b9f90342d2a4.json  target-OsterMath-Debug-7753aecd1dbdc47d104d.json
.cmake/api/v1/reply.prev/: cmakeFiles-v1-9fdc56dfbfa322456b52.json  cmakeFiles-v1-c2c6f565191e54363579.json  index-2024-05-24T06-34-03-0448.json  index-2024-05-26T20-56-32-0214.json  target-OsterMath_autogen-Debug-1217279647c11c5de9cb.json
OsterMath_autogen/: mocs_compilation.cpp
OsterMath_autogen/6YEA5652QU/: moc_bookmath.cpp.d  moc_booktoolbar.cpp.d  moc_def.cpp.d  moc_toolbartabs.cpp.d  moc_varlist.cpp.d
archive/: NodeViewFlags  ToolButton.cpp  ToolButton.h
include/: bookmath.h  booktoolbar.h  data_view.h  def.h  expression_view.h  modeldataview.h  settings.h  styles.h  toolbartabs.h  varlist.h  view.h
include/OsterLib/styles/: styles.h
include/OsterLib/utilities/: icon_functions.h  paths.h
include/OsterLib/widgets/: CollapsibleButton.h  LineEdit.h  MultiStatePushButton.h  PushButton.h  PushLabel.h
include/OsterLib/widgets/aux/: __borders_interface__.h
include/data/: obm_data.h
include/dataview/: expr_view_splitter.h  expression_text_edit.h  expression_view.h  link_viewed_nodes.h  sheets.h  tabwidgetdataview.h  window_view.h
include/dataview/model_data/: nodedataview.h
include/dataview/model_data/aux_windows/: AuxiliairyWindowInterface.h  RowColumnInsertInterface.h  insert_columns.h  insert_rows.h
include/dataview/variable_list/: dock.h  search_line.h  table.h  titlebar.h
include/kernel/: application.h  def.h  exception.h  settings.h  styles.h
include/menuwidgets/: booktoolbar.h  toolbartabs.h
include/menuwidgets/groups/: export.h  file.h
include/model/: data_view_header.h  datamodel.h  dataview_delegate.h  dataviewmodel.h  def.h  item_list.h  manager.h  model_list.h  nodeview_delegate.h  nodeview_header.h  nodeview_model.h  nodeview_select.h  varlist_delegate.h  varlist_header.h  varlist_model.h  varlistmodel.h  varlistmodel_delegate.h  varlistmodel_header.h
include/model/custom_widgets/: line_edit_btn.h
include/model/exception/: exception.h
include/model/utilities/: formattedModelIndex.h  hierarchicalheaderview.h  item_line_edit.h
include/styles/: button_style_option.h  dock_widget.h  line_edit_style_option.h  styles.h
include/utilities/: paths.h  windows.h
include/utilities/custom_widgets/: buttons.h  tabbed_toolbox_group.h  tool_group.h
include/utilities/functionalities/: sz_functions.h
include/utilities/layouts/: primitive_layouts.h
include/utilities/serialization/: serial_omb.h
include/utilities/validators/: validator.h
include/utilities/windows/: createnew.h  function_wizard_window.h  opennew.h  settings.h  windef.h
include/utilitiesWin/: createnew.h
include/widgets/: LineEdit.h  MultiStatePushButton.h  PushButton.h  ToolButton.h  __borders_interface__.h
res/: .~lock.OsterMathImagesOrigin.odg#  OsterMathImagesOrigin.odg  icons_flags.odg  interface_buttons.rcc  toolicons.qrc
src/: bookmath.cpp  data_view.cpp  def.cpp  main.cpp  modeldataview.cpp  settings.cpp  varlist.cpp  view.cpp
src/OsterLib/styles/: styles.cpp
src/OsterLib/utilities/: icon_functions.cpp  paths.cpp  sz_functions.cpp
src/OsterLib/widgets/: MultiStatePushButton.cpp  PushButton.cpp  PushLabel.cpp
src/OsterLib/widgets/aux/: __borders_interface__.cpp
src/dataview/: expr_view_splitter.cpp  expression_text_edit.cpp  expression_view.cpp  link_viewed_nodes.cpp  sheets.cpp  tabwidgetdataview.cpp  window_view.cpp
src/dataview/model_data/: modeldataview.cpp  nodedataview.cpp
src/dataview/model_data/aux_windows/: AuxiliairyWindowInterface.cpp  RowColumInsertInterface.cpp  insert_columns.cpp  insert_rows.cpp
src/dataview/variable_list/: dock.cpp  search_line.cpp  table.cpp  titlebar.cpp
src/kernel/: application.cpp  def.cpp  settings.cpp  styles.cpp
src/menuwidgets/: booktoolbar.cpp
src/model/: data_view_header.cpp  dataview_delegate.cpp  dataviewmodel.cpp  def.cpp  list_header.cpp  manager.cpp  nodeview_delegate.cpp  nodeview_header.cpp  nodeview_model.cpp  nodeview_select.cpp  varlist_delegate.cpp  varlist_header.cpp  varlist_model.cpp  varlistmodel.cpp  varlistmodel_delegate.cpp
src/model/custom_widgets/: line_edit_btn.cpp
src/model/exception/: exception.cpp
src/model/utilities/: hierarchicalheaderview.cpp
src/model/widgets/: line_edit_btn.cpp
src/styles/: styles.cpp
src/styles/widgets/: CollapsibleButton.cpp  MultiStatePushButton.cpp  PushButton.cpp  ToolButton.cpp  __borders_interface__.cpp
src/utilities/: paths.cpp
src/utilities/custom_widgets/: buttons.cpp  tabbed_toolbox_group.cpp  tool_group.cpp
src/utilities/functionalities/: sz_functions.cpp
src/utilities/windows/: function_wizard_window.cpp
ui/: bookmath.ui  data_frame.ui  var_list.ui
